--- a/sass/_block-title.scss
+++ b/sass/_block-title.scss
@@ -20,6 +20,18 @@
     h1,h2,h3,h4,h5,h6 {
         margin: 0;
         text-transform: uppercase;
+        line-height: 1.4;
+    }
+    &--white {
+        .block-title__suptitle {
+            color: #fff;
+            &::before {
+                background-color: #fff;
+            }
+        }
+        h1,h2,h3,h4,h5,h6 {
+            color: #fff;
+        }
     }
 }
 
