--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -14,6 +14,11 @@ html,body {
 a {
     text-decoration: none;
     color: inherit;
+    &:active,
+    &:focus,
+    &:focus:active {
+        outline: none;
+    }
 }
 
 p {
@@ -78,6 +83,16 @@ h6 {
     }
 }
 
+.hover-color-default {
+    transition: color $transition-default;
+    &:hover {
+        color: $hover-color-1;
+    }
+    &:active {
+        color: $hover-color-1;
+    }
+}
+
 // Container 
 .container {
     max-width: 100%;
@@ -100,13 +115,16 @@ h6 {
     &:last-child {
         padding-bottom: 0;
     }
+    &--pb-0 {
+        padding-bottom: 0;
+    }
 }
 .section-container.section-container--header {
     border-bottom: 1px solid $border-color-1;
 }
 
 .section-container.section-container--footer {
-    border-top: 1px solid $border-color-1;
+    // border-top: 1px solid $border-color-1;
 }
 
 @media screen and (min-width: $switch-on-desktop) {
@@ -136,6 +154,12 @@ h6 {
         }
         &--offset-small {
             padding-bottom: 75px;
+        }
+
+        &--no-offset-desk {
+            padding: 0;
+            margin: 0;
+            border: none;
         }
     }
 }
