--- a/sass/_block-title.scss
+++ b/sass/_block-title.scss
@@ -8,6 +8,7 @@
         text-transform: uppercase;
         display: flex;
         align-items: center;
+        line-height: 1.4;
         &::before {
             content: '';
             width: 20px;
