--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -11,7 +11,7 @@
 
     .glider-slide {
         height: 100% !important;
-        background-color: rgba(255, 0, 0, 0.363);
+        background-color: $second-color;
 
         img {
             height: 100%;
