--- a/sass/common-main-page.scss
+++ b/sass/common-main-page.scss
@@ -4,6 +4,10 @@
 @import "_global";
 @import "_buttons";
 @import "_main-menu";
+@import "_introduction";
+@import "_introductory-block";
+@import "_countdown";
+@import "_timer";
 @import "_block-title";
 @import "_infoblock";
 @import "_information";
