--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -124,7 +124,8 @@ h6 {
 }
 
 .section-container.section-container--footer {
-    // border-top: 1px solid $border-color-1;
+    position: relative;
+    overflow: hidden;
 }
 
 @media screen and (min-width: $switch-on-desktop) {
