--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -21,7 +21,6 @@ body.locked {
 a {
   text-decoration: none;
   color: inherit;
-
   &:active,
   &:focus,
   &:focus:active {
@@ -132,18 +131,21 @@ h6 {
     padding-bottom: 0;
   }
 
+  &--first {
+    padding-top: 30px;
+  }
+
   &--pb-0 {
     padding-bottom: 0;
   }
-}
 
-.section-container.section-container--header {
-  border-bottom: 1px solid $border-color-1;
-}
-
-.section-container.section-container--footer {
-  position: relative;
-  overflow: hidden;
+  &--header {
+    border-bottom: 1px solid $border-color-1;
+  }
+  &--footer {
+    position: relative;
+    overflow: hidden;
+  }
 }
 
 @media screen and (min-width: $switch-on-desktop) {
@@ -183,6 +185,9 @@ h6 {
       padding: 0;
       margin: 0;
       border: none;
+    }
+    &--first {
+      padding-top: 40px;
     }
   }
 }
