--- a/sass/_main-page-bundle.scss
+++ b/sass/_main-page-bundle.scss
@@ -1,6 +1,6 @@
-@import "variables";
-@import "fonts";
-@import "reset";
+@import "_variables";
+@import "_fonts";
+@import "_reset";
 @import "_global";
 @import "_buttons";
 @import "_main-menu";
@@ -24,4 +24,4 @@
 @import "_fast-scroll-btn";
 @import "_partners";
 @import "_footer";
-@import "_video-container";
+@import "_video-container"
