add contacts page

--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -9,6 +9,7 @@ button {
     align-items: center;
     justify-content: center;
     height: $button-height;
+    border: none;
     border-radius: 3px;
     text-align: center;
     padding: 10px 15px;
