--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -39,6 +39,7 @@ $fsz-subtext: 14px;
 $fsz-btn: 20px;
 
 /*------Line heights---------*/
+$lineheight-default: 1.4;
 
 /*-------Offsets------*/
 $section-offet-mob: 60px;
