--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -50,6 +50,7 @@ $suptitle-offet-mob: 5px;
 $suptitle-offet-desk: 10px; 
 $fixed-elems-offset: 70px;
 $list-item-offset: 25px;
+$voting-tiles-offset: 40px;
 
 /*------Sizes--------*/
 $switch-on-tablet: 768px;
