--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -33,6 +33,12 @@ button {
     }
 }
 
+.btn--s {
+    height: 40px;
+    font-size: 16px;
+    padding: 5px 15px;
+}
+
 .btn--type-1 {
     background-color: $second-color;
     color: $main-color;
@@ -57,5 +63,26 @@ button {
     &:focus,
     &:focus:active {
         background-color: $active-color-1;
+    }
+}
+
+.btn--type-3 {
+    background-color: $main-color;
+    color: $second-color;
+    border: 2px solid $second-color;
+    &:hover {
+        background-color: $hover-color-1;
+        border-color: $hover-color-1;
+        color: $main-color;
+    }
+    &:active,
+    &:focus,
+    &:focus:active {
+        background-color: $active-color-1;
+        border-color: $active-color-1;
+        color: $main-color;
+    }
+    .icon {
+        font-size: 1.25em;
     }
 }
