--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -28,6 +28,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon--l {
+  font-size: 1.25em;
+}
+
 .icon-arrow-down-long:before {
   content: "\e912";
 }
