--- a/sass/_two-cols-container.scss
+++ b/sass/_two-cols-container.scss
@@ -23,8 +23,8 @@ $sidebar-width: 300px;
         }
         &__main {
             order: 0;
-            width: 100% - $sidebar-width;
-            padding-right: 20px;
+            flex-grow: 2;
+            padding-right: 50px;
         }
     }
 }
