--- a/sass/rules-bundle.scss
+++ b/sass/rules-bundle.scss
@@ -6,6 +6,7 @@
 @import "_block-title";
 @import "_two-cols-container";
 @import "_text-content";
+@import "_navigation";
 @import "_floation-buttons";
 @import "_fast-scroll-btn";
 @import "_partners";
