--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,6 +1,7 @@
 .navigation {
     width: 300px;
     min-width: 300px;
+    max-width: 100%;
     border: 1px solid #ECEDEC;
     position: sticky;
     top: 15px;
