--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -8,7 +8,7 @@ button {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    height: $button-height;
+    min-height: $button-height;
     border: none;
     border-radius: 3px;
     text-align: center;
@@ -34,7 +34,7 @@ button {
 }
 
 .btn--s {
-    height: 40px;
+    min-height: 40px;
     font-size: 16px;
     padding: 5px 15px;
 }
