--- a/sass/_main-menu.scss
+++ b/sass/_main-menu.scss
@@ -177,6 +177,7 @@
         display: inline-flex;
         position: static;
         align-items: center;
+        font-size: 16px;
       }
 
       &.active {
