--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -18,18 +18,21 @@ button {
     font-weight: $weight-normal;
     line-height: 1.2;
     transition: background-color $transition-default, border-color $transition-default;
+
     .icon {
         margin-left: 10px;
+
         &--left {
             margin-left: 0;
             margin-right: 10px;
         }
     }
+
     &:hover,
     &:focus,
-    &:active, 
+    &:active,
     &:focus:active {
-        outline: none; 
+        outline: none;
     }
 }
 
@@ -42,9 +45,11 @@ button {
 .btn--type-1 {
     background-color: $second-color;
     color: $main-color;
+
     &:hover {
         background-color: $hover-color-1;
     }
+
     &:active,
     &:focus,
     &:focus:active {
@@ -56,9 +61,11 @@ button {
     background-color: $second-color;
     color: $main-color;
     border: 2px solid #fff;
+
     &:hover {
         background-color: $hover-color-1;
     }
+
     &:active,
     &:focus,
     &:focus:active {
@@ -70,11 +77,13 @@ button {
     background-color: $main-color;
     color: $second-color;
     border: 2px solid $second-color;
+
     &:hover {
         background-color: $hover-color-1;
         border-color: $hover-color-1;
         color: $main-color;
     }
+
     &:active,
     &:focus,
     &:focus:active {
@@ -82,7 +91,29 @@ button {
         border-color: $active-color-1;
         color: $main-color;
     }
+
     .icon {
         font-size: 1.25em;
+    }
+}
+
+.btn.arrow-animated:hover .icon {
+    animation: arrow-an linear 1.8s ;
+}
+
+
+
+
+@keyframes arrow-an {
+
+    0%,
+    50%,
+    100% {
+        transform: translateX(0);
+    }
+
+    25%,
+    75% {
+        transform: translateX(8px);
     }
 }
