--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -152,7 +152,7 @@ h6 {
   margin: 0 auto;
 }
 
-@media screen and (min-width: $switch-on-tablet) {
+@media screen and (min-width: 1500px) {
   .container {
     padding-left: 0;
     padding-right: 0;
