--- a/sass/_contacts-bundle.scss
+++ b/sass/_contacts-bundle.scss
@@ -2,10 +2,12 @@
 @import "_fonts";
 @import "_reset";
 @import "_global";
+@import "_buttons";
 @import "_main-menu";
 @import "_block-title";
-@import "_infopartners";
+@import "_contacts";
+@import "_form";
 @import "_floation-buttons";
 @import "_fast-scroll-btn";
 @import "_partners";
-@import "_footer";
+@import "_footer"
