--- a/sass/_infopartners-bundle.scss
+++ b/sass/_infopartners-bundle.scss
@@ -2,17 +2,10 @@
 @import "_fonts";
 @import "_reset";
 @import "_global";
-@import "_buttons";
 @import "_main-menu";
 @import "_block-title";
-@import "_banks-voting";
-@import "_banks-list";
-@import "_radio-custom";
-@import "_form";
+@import "_infopartners";
 @import "_floation-buttons";
 @import "_fast-scroll-btn";
 @import "_partners";
-@import "_footer";
-@import "_modal";
-@import "_registration";
-@import "_banks-sprite";
+@import "_footer"
