--- a/sass/_results-bundle.scss
+++ b/sass/_results-bundle.scss
@@ -2,14 +2,11 @@
 @import "_fonts";
 @import "_reset";
 @import "_global";
-@import "_buttons";
 @import "_main-menu";
 @import "_block-title";
-@import "_voting-tiles";
-@import "_form";
+@import "_results";
+@import "_navigation";
 @import "_floation-buttons";
 @import "_fast-scroll-btn";
 @import "_partners";
-@import "_footer";
-@import "_modal";
-@import "_registration";
+@import "_footer"
