--- a/sass/_voting-girsl-bundle.scss
+++ b/sass/_voting-girsl-bundle.scss
@@ -5,9 +5,11 @@
 @import "_buttons";
 @import "_main-menu";
 @import "_block-title";
-@import "_contacts";
+@import "_voting-tiles";
 @import "_form";
 @import "_floation-buttons";
 @import "_fast-scroll-btn";
 @import "_partners";
 @import "_footer";
+@import "_modal";
+@import "_registration"
