--- a/sass/_information.scss
+++ b/sass/_information.scss
@@ -1,9 +1,10 @@
 .information {
     p {
-        margin-bottom: 15px;
+        padding-bottom: 15px;
+        margin: 0;
 
         &:last-child {
-            margin-bottom: 0;
+            padding-bottom: 0;
         }
     }
 }
@@ -11,7 +12,7 @@
 @media screen and (min-width: $switch-on-desktop) {
     .information {
         p {
-            margin-bottom: 30px;
+            padding-bottom: 30px;
         }
     }
 }
